--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 </head>
 
 <body>
-
-<p>hello</p>
-
+	<p> my paragraph </p>
+	<img src=“res/frog_well.png" alt=“frog in well"</img>
 <body>
 </html>
