--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 
 <body>
 	<p> my paragraph </p>
-	<img src=“res/frog_well.png" alt=“frog in well"</img>
+	<img src="res/frog_well.png" alt="frog in well"</img>
 <body>
 </html>
